[tool.poetry]
name = "repl_python3_JocaliaGizmo"
version = "0.1.0"
description = "currently work in progress"
authors = ["Htet Ko Win <eitaylay2011@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
replit = "^3.1.0"
getkey = "^0.6.5"
prettytable = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
